[package]
name = "owiwi"
version = "1.1.0"
edition = "2024"
authors = ["Sede Soukossi"]
description = "A library to initialize tracing with opentelemetry"
license = "MPL-2.0"
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["opentelemetry", "tracing", "metrics"]
repository = "https://github.com/aklanti/owiwi"
rust-version = "1.94.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["clap", "serde"]
clap = ["dep:clap", "dep:clap-verbosity-flag"]
console = ["dep:opentelemetry-stdout", "opentelemetry-stdout/metrics"]
honeycomb = ["dep:secrecy"]
metrics = ["opentelemetry_sdk/metrics", "opentelemetry-otlp/metrics"]
prometheus = ["metrics"]
serde = ["dep:serde", "jiff/serde"]

[dependencies]
# Compile-time-checked builder generator
bon = "3"
# A command line argument parser
clap = { version = "4", optional = true, features = ["derive", "env"] }
# Easily add a `--verbose` flag to CLI
clap-verbosity-flag = { version = "3", optional = true, default-features = false, features = ["tracing"] }
# A datetime library
jiff =  "0.2"
# OpenTelemetry API
opentelemetry = "0.31"
# Exporter for OpenTelemetry collector
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace", "tls-roots", "tls"] }
# OpenTelemetry Sdout exporter
opentelemetry-stdout = { version = "0.31", optional = true }
# OpenTelemetry observability framework SDK
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
# A simple secret keeping library
secrecy = { version = "0.10", features = ["serde"], optional = true }
# Serialize and deserialize data structure
serde = { version = "1", features = ["derive"], optional = true }
# Provides `derive(Error)``
thiserror = "2"
# Asynchronous runtime
tokio = "1.52"
# A framework for instrumentation
tracing = "0.1"
# Utilities for enriching error handling with tracing diagnostic information.
tracing-error = "0.2"
# OpenTelemetry-compatible distributed tracing systems for processing and visualization.
tracing-opentelemetry = "0.32"
# Utilities for implementing and composing tracing subscribers
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# URL library, based on the WHATWG URL standard
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
# A rich assertion and matcher library inspired by GoogleTest for C++
googletest = { version = "0.14", features = ["proptest"] }
# A property-based testing and shrinking library
proptest = "1.8"
# Enable fixture based testing
rstest = "0.26"
# Asynchronous runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.clippy]
allow_attributes_without_reason = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
panic_in_result_fn = "warn"
too_long_first_doc_paragraph = "warn"
unused_self = "deny"
unwrap_used = "deny"

[lints.rust]
non_snake_case = "allow"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused_import_braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
